    error GPE_ILLEGAL_DIR prints the illegal directive
  * gpasm/parse.y: introduced GPE_LABEL_IN_SECTION
  * gpasm/lst.c: fixed DB assertion
  * gplink/testsuite/gplink.project/asmfiles/reloc12_1.asm,
    gplink/testsuite/gplink.project/asmfiles/reloc12_2.asm:
    idata section replaced with udata since idata is not supported on
    12bit devices

2012-11-01  Borut Razem  <borutr@users.sourceforge.net>
  * gplink/gplink.c, gplink/gplink.h.in:
    fixed bug #175 - [gplink] Multiple linker command files not accepted

2012-11-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * AUTHORS: Updated my email address.

2012-11-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx: updated

2012-11-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p16f1788.inc, header/p16f1789.inc, header/p16lf1788.inc,
    header/p16lf1789.inc, header/Makefile.in, header/Makefile.am,
    libgputils/gprocessor.c, lkr/16f1788_g.lkr, lkr/16f1789_g.lkr,
    lkr/16lf1788_g.lkr, lkr/16lf1789_g.lkr, lkr/Makefile.in,
    lkr/Makefile.am: New devices basis of the MPLAB-X v1.5.

2012-11-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpcfg-table.c: Updated basis of the MPLAB-X v1.5.

2012-11-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p12f529t39a.inc, header/p12f529t48a.inc, header/p12f1840.inc,
    header/p12lf1552.inc, header/p12lf1840.inc, header/p12lf1840t39a.inc,
    header/p12lf1840t48a.inc, header/p16f527.inc, header/p16f1454.inc,
    header/p16f1455.inc, header/p16f1459.inc, header/p16f1512.inc,
    header/p16f1513.inc, header/p16f1787.inc, header/p16f1946.inc,
    header/p16f1947.inc, header/p16lf1454.inc, header/p16lf1455.inc,
    header/p16lf1459.inc, header/p16lf1512.inc, header/p16lf1513.inc,
    header/p16lf1946.inc, header/p16lf1947.inc, header/p18cxxx.inc,
    header/p18f24k50.inc, header/p18f25k50.inc, header/p18f25k80.inc,
    header/p18f26k80.inc, header/p18f45k50.inc, header/p18f45k80.inc,